--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
     "start": "node app.js"
   },
   "dependencies": {
-    "angular-material": "^0.11.4",
     "angular-messages": "^1.4.7",
     "body-parser": "~1.13.2",
+    "bootstrap": "^3.3.5",
+    "bootstrap-sass": "^3.3.5",
     "bower": "^1.6.5",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
