--- a/bower.json
+++ b/bower.json
@@ -19,13 +19,14 @@
     "test",
     "tests"
   ],
-  "dependencies":{
+  "dependencies": {
     "angular": "~1.4.7",
     "angular-animate": "~1.4.7",
     "angular-ui-router": "~0.2.15",
     "hover": "~2.0.2",
     "angular-route": "~1.4.7",
     "angular-resource": "~1.4.7",
-    "angular-messages": "~1.4.7"
-    }
+    "angular-messages": "~1.4.7",
+    "angular-material": "master"
+  }
 }
