--- a/bower.json
+++ b/bower.json
@@ -27,6 +27,7 @@
     "angular-route": "~1.4.7",
     "angular-resource": "~1.4.7",
     "angular-messages": "~1.4.7",
-    "angular-material": "master"
+    "angular-material": "master",
+    "angular-bootstrap": "~0.14.3"
   }
 }
