--- a/package.json
+++ b/package.json
@@ -7,9 +7,8 @@
   },
   "dependencies": {
     "angular-messages": "^1.4.7",
+    "angular-ui-bootstrap": "^0.14.3",
     "body-parser": "~1.13.2",
-    "bootstrap": "^3.3.5",
-    "bootstrap-sass": "^3.3.5",
     "bower": "^1.6.5",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
