--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "grunt": "^0.4.5",
     "jade": "~1.11.0",
     "lodash": "^3.10.1",
+    "mongoose": "^4.2.7",
     "morgan": "~1.6.1",
     "node-compass": "0.2.3",
+    "nodemailer": "^1.10.0",
     "nodemon": "^1.8.1",
     "serve-favicon": "~2.3.0"
   },
