--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
-  "name": "costConsultants",
-  "version": "0.0.0",
+  "name": "Cost_Consultants",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node app.js"
+    "start": "NODE_ENV=production node app.js",
+    "test": "./node_modules/protractor/bin/protractor tests/conf.js",
+    "postinstall": "bower install"
   },
   "dependencies": {
     "angular-messages": "^1.4.7",
@@ -29,7 +31,7 @@
     "grunt-contrib-sass": "^0.9.2",
     "grunt-contrib-uglify": "^0.10.1",
     "grunt-contrib-watch": "^0.6.1",
-    "protractor": "^2.5.1",
+    "protractor": "^3.0.0",
     "selenium-standalone": "^4.7.1",
     "selenium-webdriver": "^2.48.2"
   }
