--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,16 @@
 language: node_js
 node_js:
 - 5.0.0
-services:
-- mongodb
+env:
+  - CXX=g++-4.8
 addons:
   apt:
+    sources:
+      - ubuntu-toolchain-r-test
     packages:
-      - g++-4.8
-env:
-  global:
-    - CXX=g++-4.8
+      - g++-4.
+services:
+- mongodb
 before_install:
 - npm install -g bower
 - npm install -g protractor@3.0.0
