Edited .travis file for test

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,8 +12,8 @@ addons:
 services:
 - mongodb
 before_install:
+- npm config set registry http://registry.npmjs.org/
 - npm install -g bower
-- npm install -g protractor@3.0.0
 - sudo apt-get install ruby-full
 - gem install compass --version ="1.0.3"
 - gem install sass --version ="3.4.18"
