--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,7 @@ install:
 - ./node_modules/protractor/bin/webdriver-manager start --standalone &
 before_script:
 - npm install grunt-cli -g
+- sudo grunt
 - npm start &
 - sleep 5
 - export DISPLAY=:99.0
