--- a/bower.json
+++ b/bower.json
@@ -28,6 +28,7 @@
     "angular-resource": "~1.4.7",
     "angular-messages": "~1.4.7",
     "angular-material": "master",
-    "angular-bootstrap": "~0.14.3"
+    "angular-bootstrap": "~0.14.3",
+    "angular-material-icons": "~0.6.0"
   }
 }
