--- a/.travis.yml
+++ b/.travis.yml
@@ -21,8 +21,8 @@ before_install:
 install:
 - npm install
 - bower install
-- ./node_modules/protractor/bin/webdriver-manager update --standalone
-- ./node_modules/protractor/bin/webdriver-manager start --standalone &
+- ./node_modules/protractor/bin/webdriver-manager update
+- ./node_modules/protractor/bin/webdriver-manager start &
 before_script:
 - npm install grunt-cli -g
 - grunt
