Changed travis browser start

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: node_js
 node_js:
-- 5.0.0
+- 5.2.0
 env:
 - CXX=g++-4.8
 addons:
@@ -17,19 +17,18 @@ before_install:
 - sudo apt-get install ruby-full
 - gem install compass --version ="1.0.3"
 - gem install sass --version ="3.4.18"
-- /sbin/start-stop-daemon --start --quiet --pidfile /tmp/custom_xvfb_99.pid --make-pidfile --background --exec /usr/bin/Xvfb -- :99 -ac -screen 0 1920x1080x24
 install:
 - npm install
 - bower install
-- ./node_modules/protractor/bin/webdriver-manager update
-- ./node_modules/protractor/bin/webdriver-manager start &
+- ./node_modules/protractor/bin/webdriver-manager update --standalone
+- ./node_modules/protractor/bin/webdriver-manager start --standalone &
 before_script:
 - npm install grunt-cli -g
 - grunt
 - npm start &
 - sleep 5
 - export DISPLAY=:99.0
-- sh -e /etc/init.d/xvfb start
+- /sbin/start-stop-daemon --start --quiet --pidfile /tmp/custom_xvfb_99.pid --make-pidfile --background --exec /usr/bin/Xvfb -- :99 -ac -screen 0 1920x1080x24
 - sleep 5
 script: npm test
 deploy:
