--- a/.travis.yml
+++ b/.travis.yml
@@ -20,15 +20,15 @@ before_install:
 install:
 - npm install
 - bower install
-- ./node_modules/protractor/bin/webdriver-manager update --standalone
-- ./node_modules/protractor/bin/webdriver-manager start --standalone &
-before_script:
 - npm install grunt-cli -g
+before_script:
+- ./node_modules/protractor/bin/webdriver-manager update --standalone --firefox
+- ./node_modules/protractor/bin/webdriver-manager start 2>&1 &
+- export DISPLAY=:99.0
+- sh -e /etc/init.d/xvfb start
+- sleep 5
 - grunt
 - npm start &
-- sleep 5
-- export DISPLAY=:99.0
-- /sbin/start-stop-daemon --start --quiet --pidfile /tmp/custom_xvfb_99.pid --make-pidfile --background --exec /usr/bin/Xvfb -- :99 -ac -screen 0 1920x1080x24
 - sleep 5
 script: npm test
 deploy:
