--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ addons:
     sources:
     - ubuntu-toolchain-r-test
     packages:
-    - g++-4.
+    - g++-4
 services:
 - mongodb
 before_install:
@@ -17,6 +17,7 @@ before_install:
 - sudo apt-get install ruby-full
 - gem install compass --version ="1.0.3"
 - gem install sass --version ="3.4.18"
+- /sbin/start-stop-daemon --start --quiet --pidfile /tmp/custom_xvfb_99.pid --make-pidfile --background --exec /usr/bin/Xvfb -- :99 -ac -screen 0 1920x1080x16
 install:
 - npm install
 - bower install
@@ -25,7 +26,6 @@ before_script:
 - ./node_modules/protractor/bin/webdriver-manager update --standalone --firefox
 - ./node_modules/protractor/bin/webdriver-manager start 2>&1 &
 - export DISPLAY=:99.0
-- sh -e /etc/init.d/xvfb start
 - sleep 5
 - grunt
 - npm start &
