--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "serve-favicon": "~2.3.0"
   },
   "devDependencies": {
+    "grunt-browser-sync": "^2.2.0",
     "grunt-contrib-concat": "^0.5.1",
     "grunt-contrib-cssmin": "^0.14.0",
     "grunt-contrib-sass": "^0.9.2",
