--- a/bower.json
+++ b/bower.json
@@ -29,6 +29,8 @@
     "angular-messages": "~1.4.7",
     "angular-material": "master",
     "angular-bootstrap": "~0.14.3",
-    "angular-material-icons": "~0.6.0"
+    "angular-material-icons": "~0.6.0",
+    "angular-moment": "~0.10.3",
+    "moment": "~2.11.0"
   }
 }
