--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "grunt": "^0.4.5",
     "jade": "~1.11.0",
     "lodash": "^3.10.1",
+    "moment": "^2.11.0",
     "mongoose": "^4.2.7",
     "morgan": "~1.6.1",
     "node-compass": "0.2.3",
