Added resolution to bower.json

--- a/bower.json
+++ b/bower.json
@@ -32,5 +32,8 @@
     "angular-material-icons": "~0.6.0",
     "angular-moment": "~0.10.3",
     "moment": "~2.11.0"
+  },
+  "resolutions": {
+    "moment": "~2.11.0"
   }
 }
