--- a/bower.json
+++ b/bower.json
@@ -31,7 +31,7 @@
     "angular-bootstrap": "~0.14.3",
     "angular-material-icons": "~0.6.0",
     "angular-moment": "~0.10.3",
-    "moment": "~2.11.0"
+    "moment": "~2.11.0",
   },
   "resolutions": {
     "moment": "~2.11.0"
